[project]
name = "imgaug"
version = "0.5.0"
description = "Image augmentation library for deep neural networks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords=["augmentation", "image", "deep learning", "neural network", "CNN", "machine learning", "computer vision", "overfitting"]
dependencies = [
    "six==1.17.0",
    "numpy==2.2.3",
    "scipy==1.15.1",
    "pillow==11.1.0",
    "matplotlib==3.10.0",
    "scikit-image>=0.25.0",
    "opencv-python-headless>=4.11.0",
    "imageio==2.37.0",
    "shapely==2.0.7",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.uv]
package = true

[build-system]
requires = [
  "setuptools >= 75.8.0",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright",
    "types-shapely",
    "types-mock",
    "types-six",
    "types-pillow",
]

[tool.setuptools.package-dir]
imgaug = "imgaug"
